# verified-engineering-studio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: cloudflared.yml.example  verified-engineering-studio.service  verified-engineering-tunnel.service  ves.service
docs/: ADDING_A_MODULE.md  ASSET_REGISTER.md  BUILD_WEEK_LOG.md  CFD_METHOD_REFERENCES.md  GRID_CONVERGENCE_PLAN.md  PRODUCT_ROADMAP.md  VESPACK.md
scripts/: configure-openai-key.sh
src/ves/: __init__.py  app.py  cli.py
src/ves/core/: __init__.py  cost_guard.py  models.py  package.py  registry.py  review.py
src/ves/modules/: __init__.py  base.py
src/ves/modules/cfd/: __init__.py  case_v9.json  convergence.py  module.py
src/ves/modules/isaac/: __init__.py  module.py
src/ves/static/: index.html
src/ves/static/assets/: app.css  app.js
submission/: FINAL_CHECKLIST.md  JUDGE_GUIDE.md  VIDEO_SCRIPT.md  devpost.md
tests/: test_api.py  test_cfd_convergence.py  test_cost_guard.py  test_modules.py  test_package.py
